--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -23,6 +23,13 @@ body {
 	transition: transform 0.3s;
 }
 
+.icon-seach-input{
+	position: absolute;
+	top: 18%;
+	left: 10px;
+	padding:10px;
+}
+
 .exam-card:hover {
 	transform: translateY(-3px);
 	box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
